--- a/templates/account/registration/account_activation_email.html
+++ b/templates/account/registration/account_activation_email.html
@@ -1,5 +1,5 @@
 {% autoescape  off %}
-Hi {{user.user_name}},
+Hi {{user.username}},
 Your account has been successfully created. Please click below link to activate your account
 http://{{domain}}{% url 'activate' uidb64=uid token=token%}
 {% endautoescape %}
