--- a/templates/ecom/base.html
+++ b/templates/ecom/base.html
@@ -41,7 +41,7 @@
 
                 </div>
                 {% if user.is_authenticated %}
-                    <a type="button" role="button" href=""
+                    <a type="button" role="button" href="{% url 'logout' %}"
                         class="btn btn-outline-secondary border-0 basket-btn">
                         <div>
                             <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
@@ -54,7 +54,7 @@
                         <span class="fs15 fw500">Logout</span>
                     </a>
                     {% else %}
-                    <a type="button" role="button" href="{% url "account:login" %}"
+                    <a type="button" role="button" href="{% url 'login' %}"
                         class="btn btn-outline-secondary border-0 basket-btn">
                         <div>
                             <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
@@ -81,7 +81,7 @@
                         <span class="fs15 fw500">Account</span>
                     </a>
                     <a type="button" role="button" href="{% url "cart-summary" %}"
-                    class="btn btn-outline-secondary border-0 cart-btn">
+                        class="btn btn-outline-secondary border-0 cart-btn">
                     <div>
                         {% with total_qty=cart|length %}
                         <div id="cart-qty" class="cart-qty">
