--- a/templates/cart/summary.html
+++ b/templates/cart/summary.html
@@ -1,10 +1,52 @@
 {% extends "../ecom/base.html" %}
-{% load static%}
+{% load static %}
 {% block title %}Cart summary{% endblock %}
 
 {% block content %}
-<main class="pt-5">
-    <div class="container">
+<div class="container" style="max-width: 1000px">
+    <div class="col-12">
+      <h1 class="h2">Your Cart</h1>
+    </div>
+    <div class="col-12">
+      <p>Manage your <b>items</b> in your Cart</p>
+    </div>
+    <hr />
+  </div>
+  <div class="container" style="max-width: 1000px">
+    
+    <div class="row g-3">
+      <div class="col-12 bg-light p-3 d-flex justify-content-between">
+        <div class="d-flex d-flex-inline">
+          <div class="pe-3">Order</div>
+          <div class="dropdown">
+          <a class="text-reset text-decoration-none dropdown-toggle" href="#" role="link" id="dropdownLink" data-bs-toggle="dropdown" aria-expanded="false">
+          Shipping options
+          <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor" class="bi bi-chevron-down" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
+          </svg>
+          </a>
+
+          <ul class="dropdown-menu" aria-labelledby="dropdownLink">
+            <li class="item small">Next day delivery</li>
+            <li class="item small">Premimum delivery</li>
+          </ul>
+          </div>
+        </div>
+        <div class="text-end">
+          
+          <div class="">Sub Total: <span class="fw-bold">Rs.</span><div id="subtotal" class="d-inline-flex fw-bold">{{cart.get_subtotal_price}}</div></div>
+          <div id="">Shipping <span class="small">(Next day delivery)</span>: <span class="fw-bold">Rs.11.50</span></div>
+          <div class="pt-2">Total to pay: <span class="fw-bold h5">Rs.</span><span id="total" class="fw-bold h5">{{cart.get_total_price}}</span></div>
+          
+        </div>
+      </div>
+      <div class="col-md-5 col-lg-4 order-md-last p-0 order-3">
+        <div class="d-grid gap-2 ">
+          <a role="button" href="{% url "cart" %}" class="btn btn-success fw-bold" type="button">Checkout</a>
+          <button class="btn btn-light" type="button">Save for later</button>
+        </div>
+      </div>
+
         <h1 class="h5">Shopping Cart</h1>
         {% for item in cart %}
         {% with product=item.product %}
@@ -52,46 +94,46 @@
     </div>
 </main>
 <script>
-    $(document).on('click', '.delete-button', function (e) {
-        e.preventDefault();
-        var pid = $(this).data('index');
-        $.ajax({
-            type: 'POST',
-            url: '{% url 'cart_delete' %}',
-            data: {
-                productid: pid,
-                csrfmiddlewaretoken: "{{ csrf_token }}",
-                action: 'post'
-            },
-            success: function (json) {
-                $('.product-item[data-index="' + pid + '"]').remove();
-                // Update the subtotal after deleting
-                $('#cart-qty').text(json.qty);
-                $('#subtotal').text(json.total); 
-            },
-            error: function (xhr, errmsg, err) { }
-        });
-    });
-
-    $(document).on('click', '.update-button', function (e) {
-        e.preventDefault();
-        var pid = $(this).data('index');
-        var newQty = $('#quantity' + pid).val();
-        $.ajax({
-            type: 'POST',
-            url: '{% url 'cart_update' %}',
-            data: {
-                productid: pid,
-                productqty: newQty,
-                csrfmiddlewaretoken: "{{ csrf_token }}",
-                action: 'post'
-            },
-            success: function (json) {
+  $(document).on('click', '.delete-button', function (e) {
+      e.preventDefault();
+      var pid = $(this).data('index');
+      $.ajax({
+          type: 'POST',
+          url: '{% url 'cart_delete' %}',
+          data: {
+              productid: pid,
+              csrfmiddlewaretoken: "{{ csrf_token }}",
+              action: 'post'
+          },
+          success: function (json) {
+              $('.product-item[data-index="' + pid + '"]').remove();
+              // Update the subtotal after deleting
               $('#cart-qty').text(json.qty);
-              $('#subtotal').text(json.total);      
-            },
-            error: function (xhr, errmsg, err) { }
-        });
-    });
+              $('#subtotal').text(json.total); 
+          },
+          error: function (xhr, errmsg, err) { }
+      });
+  });
+
+  $(document).on('click', '.update-button', function (e) {
+      e.preventDefault();
+      var pid = $(this).data('index');
+      var newQty = $('#quantity' + pid).val();
+      $.ajax({
+          type: 'POST',
+          url: '{% url 'cart_update' %}',
+          data: {
+              productid: pid,
+              productqty: newQty,
+              csrfmiddlewaretoken: "{{ csrf_token }}",
+              action: 'post'
+          },
+          success: function (json) {
+            $('#cart-qty').text(json.qty);
+            $('#subtotal').text(json.total);      
+          },
+          error: function (xhr, errmsg, err) { }
+      });
+  });
 </script>
-{% endblock %}
+{%endblock%}
